# ocasm

./: .gitignore  .ocamlformat  LICENSE  a.out  dune-project  ocasm.opam  ocasm_assembler.opam  ocasm_bfd.opam  ocasm_core.opam  ocasm_lexer.opam  ocasm_parser.opam  test.s
.github/workflows/: ci.yaml
assembler/: directive.ml  directive.mli  directives.mli  dune  language.ml  language.mli  section.ml  section.mli  section_state.ml  section_state.mli  state.mli  symbol.ml  symbol.mli  symtab_state.ml  symtab_state.mli
bfd/: bfd.ml  bfd.mli  bfd_ffi.ml  carray.ml  carray.mli  dune  error.ml  error.mli  function_description.ml  lol  section_flags.ml  section_flags.mli  test  test.c  type_description.ml
binary/: arch.ml  bfd.ml  bfd.mli  carray.ml  carray.mli  dune  symbol_flags.mli  test  test.c  type_description.ml  word_type.ml  word_type.mli
cli/: assemble_file.ml  dune  help.ml
core/: diagnostic_message.ml  diagnostic_message.mli  diagnostics_handler.ml  diagnostics_handler.mli  diagnostics_handler_intf.ml
dune.lock/: getopt.pkg  lock.dune  ppx_deriving.pkg  ppx_deriving_hash.pkg
elf/: dune  elf_header.ml  elf_header.mli  program_header.ml  program_header.mli  section_header.ml  section_header.mli
lexer/: diagnostics.ml  dune  errors.ml  errors.mli  errors_intf.ml  import.ml  input.ml  input.mli  input_intf.ml  lexer.ml  lexer.mli  lexer_state.ml  lexer_state.mli  number_builder.mli  positioned.ml  positioned.mli  token.ml  token.mli  token_builder.ml  token_builder.mli
parser/: diagnostics.ml  diagnostics.mli  dune  input.ml  input.mli  lexer.ml  lexer.mli  lexer_state.ml  lexer_state.mli  number_builder.ml  number_builder.mli  parser_state.ml  parser_state.mli  positioned.ml  positioned.mli  token.ml  token.mli  token_builder.ml
rv32/: dune  fence_type.ml  instruction.ml  instruction_builder.ml  lexer.mll  parser.mly  parser_error.ml  parser_frontend.ml  register.ml
src/assembler/: directive.ml  directive.mli  dune  first_pass.ml  first_pass.mli  import.ml  language.ml  language.mli  parser.ml  parser.mli  preprocessed_command.ml  preprocessed_command.mli  preprocessed_command_intf.ml  (+12 more)
test/: dune  import.ml  mock_isa.ml  mock_token.ml  test.ml  test_bfd.ml  test_fence_type.ml  test_immediate.ml  test_instruction.ml  test_lexer.ml  test_lexer_input.ml  test_parser.ml  test_parser_code_snippets.ml  test_parser_input.ml  test_single_instruction_parsing.ml  test_writer.ml  testable.ml
test/assets/input/: long_file_2.txt
test/common/: dune  import.ml  testable.ml
test/unit-tests/lexer/: dune  import.ml  lexer_for_tests.ml  test_diagnostics.expected  test_diagnostics.ml  test_lexer.ml  test_lexer_input.ml  test_multiple_tokens.ml  test_single_token.ml
test/unit-tests/lexer/assets/input/: long_file_1.txt  long_file_3.txt
test/unit-tests/lexer/suites/: dune  import.ml  lexer_for_tests.ml  test_diagnostics.ml  test_multiple_tokens.ml
test/unit-tests/parser/: dune  import.ml  test_parser.ml  test_snippets.ml
ttt/: a.out  logg.txt  lol.s  test
utils/: array.ml  array.mli  bufferable.ml  char.ml  char.mli  lut.ml  lut.mli  panic.ml  path.ml  path.mli  to_string.mli  word_type.mli
writer/: dune  section.ml  section.mli  section_writer.ml  section_writer.mli  symbol.ml  symbol.mli  symtab_writer.ml  symtab_writer.mli  writer.ml  writer.mli
(+136 files in other folders)
