(test
 (name test)
 (libraries
  alcotest
  base
  ocasm_core
  ctypes
  rv32
  ocasm_bfd
  ocasm_lexer
  ocasm_parser)
 (link_flags -cclib -L%{env:RISC_V_TOOLCHAIN=}/lib -cclib -lbfd)
 (deps
  (glob_files assets/input/*))
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving_hash
   ppx_deriving.ord
   ppx_fields_conv
   ppx_deriving.show
   ppx_sexp_conv)))
